[package]
name = "opensubdiv"
version = "0.1.0"
authors = ["Scott Wilson <scott@propersquid.com>"]
edition = "2018"
license = "BSD-3-Clause"
description = "Rust bindings for OpenSubdiv (placeholder)"
keywords = ["vfx", "animation", "cg", "opensubdiv", "subdivision surface"]
categories = ["api-bindings"]
homepage = "https://www.github.com/scott-wilson/OpenSubdiv-rs"
documentation = "https://docs.rs/OpenSubdiv"
repository = "https://www.github.com/scott-wilson/OpenSubdiv-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
